src/objects/Escalation__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Story__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Task__c.Story__c</field>
                <operation>equals</operation>
                <valueField>$Source.Story__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer issues</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Escalation</label>
    <nameField>
        <displayFormat>ESC-{00000}</displayFormat>
        <label>Escalation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>